# hyprland-workplace-profiles

./: Cargo.toml  README.md  two_display.out  workplaces.yml
src/: configuration.rs  ddc.rs  main.rs  wlr_output_state.rs
