[package]
name = "hyprland-kanshi-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
ddc-hi = "0.4.1"
derive-getters = "0.3.0"
derive_builder = "0.12.0"
id_tree = "1.8.0"
once_cell = "1.18.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.30.0", features = ["full"] }
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.1", features = ["client"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
